Fix: Added responsive alignment classes

--- a/src/block/button-group/style.scss
+++ b/src/block/button-group/style.scss
@@ -7,15 +7,9 @@
 }
 
 // Button alignment.
-:where(.has-text-align-center .stk-block-button-group) .stk-inner-blocks,
-.stk-block-button-group .has-text-align-center {
-	justify-content: center;
-}
-:where(.has-text-align-right .stk-block-button-group) .stk-inner-blocks,
-.stk-block-button-group .has-text-align-right {
-	justify-content: flex-end;
-}
-:where(.has-text-align-left .stk-block-button-group) .stk-inner-blocks,
-.stk-block-button-group .has-text-align-left {
-	justify-content: flex-start;
+.stk-block-button-group {
+	&,
+	.stk-inner-blocks {
+		justify-content: var(--stk-alignment-justify-content);
+	}
 }
